--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Banana-Speak</title>
 </head>
 <body>
-    
+
+    <h1>Banana-Speak</h1>
+
+    <button id="btn-Translate">Translate</button>
+
+
+
+
+
+
+
+
+
+    <script src="app.js"></script>
 </body>
 </html>
